--- a/lesson15/lesson15_1.ipynb
+++ b/lesson15/lesson15_1.ipynb
@@ -504,7 +504,7 @@
    ],
    "source": [
     "#每個學生的總分\n",
-    "scores.sum(axis=1)"
+    "scores.sum(axis=1) #ndarray實體方法"
    ]
   },
   {
@@ -552,6 +552,58 @@
     "#第1科最高的分數和最低的分數\n",
     "scores [:,0].max(axis=0)\n",
     "scores [:,0].min(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3d885425",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([379, 358, 380, 340, 369, 397, 373, 427, 372, 356, 330, 398, 397,\n",
+       "       339, 366, 370, 353, 385, 412, 376, 311, 383, 373, 400, 315, 410,\n",
+       "       413, 400, 294, 349, 392, 401, 419, 381, 385, 368, 411, 381, 330,\n",
+       "       334, 452, 372, 435, 385, 343, 371, 368, 315, 352, 375])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#每個學生的總分\n",
+    "scores.sum(axis=1) #ndarray實體方法\n",
+    "\n",
+    "np.sum(scores,axis=1) #numpy的global的function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "418155b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([75.8, 71.6, 76. , 68. , 73.8, 79.4, 74.6, 85.4, 74.4, 71.2, 66. ,\n",
+       "       79.6, 79.4, 67.8, 73.2, 74. , 70.6, 77. , 82.4, 75.2, 62.2, 76.6,\n",
+       "       74.6, 80. , 63. , 82. , 82.6, 80. , 58.8, 69.8])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#前30位學生的平均\n",
+    "scores[:30].mean(axis=1)\n",
+    "np.mean(scores[:30],axis=1)"
    ]
   }
  ],
