--- a/lesson15/lesson15_3.ipynb
+++ b/lesson15/lesson15_3.ipynb
@@ -5,7 +5,8 @@
    "id": "52aac4a8",
    "metadata": {},
    "source": [
-    "### numpy的reshape()\n"
+    "### numpy的reshape()\n",
+    "https://www.perplexity.ai/search/8fe65bd5-dbd8-45b1-8f50-8351f5dcbd9d"
    ]
   },
   {
