--- a/lesson16/lesson16_1.ipynb
+++ b/lesson16/lesson16_1.ipynb
@@ -1126,6 +1126,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "b64f655d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>生物</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學號1</th>\n",
+       "      <td>88</td>\n",
+       "      <td>78</td>\n",
+       "      <td>64</td>\n",
+       "      <td>92</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號2</th>\n",
+       "      <td>70</td>\n",
+       "      <td>88</td>\n",
+       "      <td>68</td>\n",
+       "      <td>72</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號3</th>\n",
+       "      <td>60</td>\n",
+       "      <td>73</td>\n",
+       "      <td>85</td>\n",
+       "      <td>89</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號4</th>\n",
+       "      <td>52</td>\n",
+       "      <td>71</td>\n",
+       "      <td>51</td>\n",
+       "      <td>73</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號5</th>\n",
+       "      <td>79</td>\n",
+       "      <td>87</td>\n",
+       "      <td>51</td>\n",
+       "      <td>70</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  歷史  生物\n",
+       "學號1  88  78  64  92  57\n",
+       "學號2  70  88  68  72  60\n",
+       "學號3  60  73  85  89  73\n",
+       "學號4  52  71  51  73  93\n",
+       "學號5  79  87  51  70  82"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df1.iloc[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "422e2783",
    "metadata": {},
