--- a/lesson16/lesson16_7.ipynb
+++ b/lesson16/lesson16_7.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5ec74b0d",
+   "metadata": {},
+   "source": [
+    "\n",
+    "https://www.perplexity.ai/search/224a180b-342f-4bcd-adce-643351daee12"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "b2d842c5",
    "metadata": {},
    "outputs": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9ec8217c",
    "metadata": {},
    "outputs": [
@@ -230,7 +239,7 @@
        "[187885 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c7e02028",
    "metadata": {},
    "outputs": [
@@ -283,187 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "bc00a4a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>洲名</th>\n",
-       "      <th>國家</th>\n",
-       "      <th>日期</th>\n",
-       "      <th>總確診數</th>\n",
-       "      <th>新增確診數</th>\n",
-       "      <th>總人口數</th>\n",
-       "      <th>解封指數</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>85626</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2020-01-22</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85627</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85628</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2020-01-24</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85629</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2020-01-25</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85630</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2020-01-26</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86518</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2022-07-02</td>\n",
-       "      <td>9364954</td>\n",
-       "      <td>24875</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86519</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2022-07-03</td>\n",
-       "      <td>9388222</td>\n",
-       "      <td>23268</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86520</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2022-07-04</td>\n",
-       "      <td>9405007</td>\n",
-       "      <td>16785</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86521</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2022-07-05</td>\n",
-       "      <td>9441171</td>\n",
-       "      <td>36164</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86522</th>\n",
-       "      <td>亞洲</td>\n",
-       "      <td>日本</td>\n",
-       "      <td>2022-07-06</td>\n",
-       "      <td>9486965</td>\n",
-       "      <td>45794</td>\n",
-       "      <td>126050796</td>\n",
-       "      <td>99999.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>897 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       洲名  國家          日期     總確診數  新增確診數       總人口數     解封指數\n",
-       "85626  亞洲  日本  2020-01-22        2      0  126050796  99999.0\n",
-       "85627  亞洲  日本  2020-01-23        2      0  126050796  99999.0\n",
-       "85628  亞洲  日本  2020-01-24        2      0  126050796  99999.0\n",
-       "85629  亞洲  日本  2020-01-25        2      0  126050796  99999.0\n",
-       "85630  亞洲  日本  2020-01-26        4      2  126050796  99999.0\n",
-       "...    ..  ..         ...      ...    ...        ...      ...\n",
-       "86518  亞洲  日本  2022-07-02  9364954  24875  126050796  99999.0\n",
-       "86519  亞洲  日本  2022-07-03  9388222  23268  126050796  99999.0\n",
-       "86520  亞洲  日本  2022-07-04  9405007  16785  126050796  99999.0\n",
-       "86521  亞洲  日本  2022-07-05  9441171  36164  126050796  99999.0\n",
-       "86522  亞洲  日本  2022-07-06  9486965  45794  126050796  99999.0\n",
-       "\n",
-       "[897 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "taiwan_df = allDataFrame.query('國家==\"台灣\"')\n",
-    "japan_df = allDataFrame.query('國家==\"日本\"')\n",
-    "japan_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "c5d4eacf",
    "metadata": {},
    "outputs": [],
@@ -477,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "7bded3e5",
    "metadata": {},
    "outputs": [
@@ -510,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "dded5d2d",
+   "execution_count": 8,
+   "id": "42fdd731",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +358,7 @@
       "\u001b[1;31mKeyError\u001b[0m: '總死亡數'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[41], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m mpl\u001b[38;5;241m.\u001b[39mrc(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfont\u001b[39m\u001b[38;5;124m'\u001b[39m,family\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChineseFont\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m----> 8\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(pd\u001b[38;5;241m.\u001b[39mto_datetime(taiwan1_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m日期\u001b[39m\u001b[38;5;124m'\u001b[39m]),\u001b[43mtaiwan1_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m總死亡數\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      9\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(pd\u001b[38;5;241m.\u001b[39mto_datetime(japan1_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m日期\u001b[39m\u001b[38;5;124m'\u001b[39m]),japan1_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m總死亡數\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     10\u001b[0m plt\u001b[38;5;241m.\u001b[39mgca()\u001b[38;5;241m.\u001b[39mticklabel_format(style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplain\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[8], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m mpl\u001b[38;5;241m.\u001b[39mrc(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfont\u001b[39m\u001b[38;5;124m'\u001b[39m,family\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChineseFont\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m----> 8\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(pd\u001b[38;5;241m.\u001b[39mto_datetime(taiwan1_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m日期\u001b[39m\u001b[38;5;124m'\u001b[39m]),\u001b[43mtaiwan1_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m總死亡數\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      9\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(pd\u001b[38;5;241m.\u001b[39mto_datetime(japan1_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m日期\u001b[39m\u001b[38;5;124m'\u001b[39m]),japan1_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m總死亡數\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     10\u001b[0m plt\u001b[38;5;241m.\u001b[39mgca()\u001b[38;5;241m.\u001b[39mticklabel_format(style\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplain\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\asus\\miniconda3\\envs\\myenv\\lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\asus\\miniconda3\\envs\\myenv\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: '總死亡數'"
