--- a/lesson17/lesson17_2.ipynb
+++ b/lesson17/lesson17_2.ipynb
@@ -185,6 +185,42 @@
    "source": [
     "string_data.dropna()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a8b8bb",
+   "metadata": {},
+   "source": [
+    "### 如何資料轉換型別\n",
+    "- astype() 強制轉換型別"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "465c9667",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1.0\n",
+       "1    -999.0\n",
+       "2       2.0\n",
+       "3   -1000.0\n",
+       "4       3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.Series([\"1.\", \"-999.\", \"2.\", \"-1000.\", \"3.\"])\n",
+    "data.astype(float)\n"
+   ]
   }
  ],
  "metadata": {
