--- a/lesson18/lesson18_3.ipynb
+++ b/lesson18/lesson18_3.ipynb
@@ -44,6 +44,42 @@
     "filenames = [file_name for file_name in allitems if len(file_name) > 12]\n",
     "filenames"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6fecc1fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\asus\\Documents\\GitHub\\python__analysis\\lesson18\\每日各站進出站人數\\每日各站進出站人數20190423-20191231.csv\n",
+      "c:\\Users\\asus\\Documents\\GitHub\\python__analysis\\lesson18\\每日各站進出站人數\\每日各站進出站人數2020.csv\n",
+      "c:\\Users\\asus\\Documents\\GitHub\\python__analysis\\lesson18\\每日各站進出站人數\\每日各站進出站人數2021.csv\n",
+      "c:\\Users\\asus\\Documents\\GitHub\\python__analysis\\lesson18\\每日各站進出站人數\\每日各站進出站人數2022.csv\n",
+      "c:\\Users\\asus\\Documents\\GitHub\\python__analysis\\lesson18\\每日各站進出站人數\\每日各站進出站人數2023.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "folder_name = '每日各站進出站人數'\n",
+    "folder_abspath = os.path.abspath(folder_name)\n",
+    "allitems:list[str] = os.listdir(folder_abspath)\n",
+    "\n",
+    "# for file_name in allitems:\n",
+    "#     if len(file_name) > 12:\n",
+    "#         print(file_name)\n",
+    "\n",
+    "#綜合串列運算語法(comprehension)\n",
+    "\n",
+    "filenames = [file_name for file_name in allitems if len(file_name) > 12]\n",
+    "for file_name in filenames:\n",
+    "    filename_absPath = os.path.join(folder_abspath, file_name)\n",
+    "    print(filename_absPath)"
+   ]
   }
  ],
  "metadata": {
